# Tests for MCL

CMAKE_MINIMUM_REQUIRED(VERSION 3.16 FATAL_ERROR)

PROJECT(SCL_TESTS)

SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

SET(EXECUTABLE_OUTPUT_PATH ${LIBRARY_OUTPUT_PATH}/test)

find_package(Boost COMPONENTS thread unit_test_framework REQUIRED)

set(SOURCES
  main.cpp
  multiVector_sorted_test.cpp
  )

set(LIBRARIES
  SCL,
  ${Boost_LIBRARIES}
  )

cmake_path(GET CMAKE_CURRENT_SOURCE_DIR PARENT_PATH PARENT_DIR)
cmake_path(GET PARENT_DIR PARENT_PATH PARENT_PARENT_DIR)


LINK_DIRECTORIES(${CMAKE_BINARY_DIR})

add_executable(${PROJECT_NAME} ${SOURCES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${LIBRARIES})

target_include_directories(${PROJECT_NAME}
  PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}
  PRIVATE ${PARENT_DIR},
          ${Boost_INCLUDE_DIRS},
          ../GCL,
          ../
          )


ENABLE_TESTING()
ADD_TEST(${PROJECT_NAME} ${PROJECT_NAME})

ADD_CUSTOM_COMMAND(TARGET ${PROJECT_NAME} COMMENT "Run tests" POST_BUILD  COMMAND ${PROJECT_NAME})

